# mcp-feedback-pipe

./: .env.example  .eslintrc.js  .gitignore  .mcp_server_pool_status.json  .prettierrc.js  MANIFEST.in  MCP_SERVER_USAGE.md  README.md  RELEASE_NOTES.md  TESTPYPI_TEST_REPORT.md  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  test_report.md  trigger_mcp_client_test.py  trigger_mcp_test.py  trigger_tool_execution_test.py
.windsurf/workflows/: design-and-orchestra-mode.md
backend/: __init__.py  app.py  config.py  feedback_handler.py  server.py  server_manager.py  server_pool.py  version.py
backend/routes/: feedback_routes.py
backend/utils/: __init__.py  image_utils.py  network_utils.py
docs/: ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  MCP_SETUP.md  PROJECT_STRUCTURE.md  PUBLISHING_GUIDE.md  README.md  SSH_SETUP.md  TEST_REPORT.md  TODO.md  claude_desktop_config_deploy.json  claude_desktop_config_uvx.json  claude_desktop_config_v3.json
docs/dev_guide/dependencies/: DEPENDENCY_VERSIONS.md
docs/text_report/: test_results.md
docs/user_guide/: MCP_SETUP.md
frontend/static/js/: feedback-main.js
frontend/static/js/config/: app-config.js
frontend/static/js/modules/: timeout-manager.js  websocket-manager.js
frontend/static/js/timeout/: activity.js  backup.js  countdown.js  index.js  submission.js  ui.js
frontend/templates/: feedback.html
mcp_feedback_pipe/: __init__.py
mcp_feedback_pipe/backend/: server_manager.py
scripts/: mcp_deploy.py  publish_to_pypi.py  setup_ssh.py  start_server.py
src/mcp_feedback_collector/: __init__.py  server.py
src/mcp_feedback_collector/static/js/: feedback.js
src/mcp_feedback_collector/templates/: feedback.html
src/mcp_feedback_pipe/: app.py  feedback_handler.py  server_manager.py  version.py
src/mcp_feedback_pipe/static/js/: feedback-main.js
src/mcp_feedback_pipe/templates/: feedback.html
tests/: __init__.py  conftest.py  run_tests.py  test_requirements.txt  test_validation.py
tests/e2e/: test_session_behavior_ui.py  test_user_workflow.py
tests/integration/: deploy_test.py  test_elegant_solution.py  test_timeout_fix.py  test_web_interface.py  test_web_version.py  test_websocket_connection.py
tests/project_validation/: test_validation.py
tests/tools/: README.md  test_security_fixes.py  update_sri_hashes.py
tests/unit/: test_app_memory_safety.py  test_feedback_handler.py  test_mcp_basic.py  test_server_manager.py  test_server_manager_activity.py  test_server_pool.py  test_utils.py
tests/unit/frontend/: test_timeout_handler_helpers.js
tools/: README.md  check_dependency_updates.py  check_dev_version.py  check_modules.py  mcp_server_status.py  update_sri_hashes.py
